[package]
name = "chimera-networking"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
derivative = "2.2"
itertools = "0.10"
futures = "0.3"
tracing = "0.1"
async-trait = "0.1"

getrandom = "0.2"
rs_hmac = "0.1"
rs_sha3_512 = "0.1"

tokio = { version = "1", features = ["sync", "macros"] }
warp = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.18", optional = true }
tokio-util = { version = "0.7", optional = true }

chimera-core = { path = "../chimera-core" }
chimera-utils = { path = "../chimera-utils" }

[features]
transport-websockets = ["dep:warp", "dep:tokio-tungstenite", "dep:tokio-util", "tokio/full"]
default = ["transport-websockets"]
