[package]
name = "chimera-reify-gdext"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2.0"
thiserror = "1.0"
uuid = {version = "1.1", features = ["v4", "serde"]}
itertools = "0.13"
tracing = "0.1"

chimera-core = { path = "../chimera-core" }
chimera-utils = { path = "../chimera-utils" }

godot = { path = "../../gdext/godot", features = ["serde", "experimental-threads"] }
