[package]
name = "chimera-reify-gdnative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2.0"
thiserror = "1.0"
uuid = {version = "1.1", features = ["v4", "serde"]}
itertools = "0.13"
tracing = "0.1"

chimera-core = { path = "../chimera-core" }
chimera-utils = { path = "../chimera-utils" }

gdnative = { git = "https://github.com/godot-rust/gdnative.git", features = ["serde"] }
