[package]
name = "chimera-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
derivative = "2.2"
thiserror = "1.0"
itertools = "0.13"
futures = "0.3"
tracing = "0.1"
async-trait = "0.1"

tracing-subscriber = { version = "0.3", features = ["tracing-log", "json"]}
tracing-tree = "0.4"

tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }

chimera-utils = { path = "../chimera-utils" }
