[package]
name = "chimera-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
futures = "0.3"
tracing = "0.1"

tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"

chimera-core = { path = "../chimera-core" }
chimera-ecs = { path = "../chimera-ecs" }
chimera-utils = { path = "../chimera-utils" }
