[package]
name = "chimera-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0", features = ["full", "extra-traits"]}

serde = {version = "1", features = ["derive"] }
serde_json = "1"
convert_case = "0"
prettyplease = "0"

chimera-utils = { path = "../../chimera-utils" }

[features]
coroutines = []
trivial_bounds = []

default = ["coroutines"]
